fix yo-list input placeholder alignment

--- a/style/usage/export/index.css
+++ b/style/usage/export/index.css
@@ -1091,6 +1091,7 @@ a {
   appearance: none;
   display: block;
   width: 100%;
+  min-height: .21rem;
   border: 0;
 }
 
