--- a/style/usage/export/yo-calendar.css
+++ b/style/usage/export/yo-calendar.css
@@ -1092,6 +1092,7 @@ a {
   appearance: none;
   display: block;
   width: 100%;
+  min-height: .21rem;
   border: 0;
 }
 
