--- a/style/usage/export/yo-list.css
+++ b/style/usage/export/yo-list.css
@@ -1174,6 +1174,7 @@ a {
   appearance: none;
   display: block;
   width: 100%;
+  min-height: .21rem;
   border: 0;
 }
 
